Fixed bug #70656 (require() statement broken after opcache_reset() or a few hours of use)